--- a/web/99dan.html
+++ b/web/99dan.html
@@ -7,5 +7,8 @@
     <% for(let i = 1; i <= length; i++){ %>
         <%=primary%> * <%=i%> = <%= primary * i %> <br/>
     <% } %>
+    <% for(let i = 1; i <= length; i++){ %>
+        <%=primary%> * <%=i%> = <%= primary * i %> <br/>
+    <% } %>
     </body>
 </html>
